# konf

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  clippy.toml  deny.toml  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: audit.yml  ci.yml  pages.yml
crates/konf-backend/: Cargo.toml
crates/konf-backend/src/: error.rs  main.rs
crates/konf-backend/src/api/: admin.rs  chat.rs  health.rs  mcp.rs  me.rs  mod.rs  monitor.rs
crates/konf-backend/src/auth/: jwt.rs  middleware.rs  mod.rs
crates/konf-backend/src/scheduling/: mod.rs
crates/konf-backend/src/templates/: chat.yaml  context.yaml  extraction.yaml  mod.rs  synthesis.yaml
crates/konf-init/: Cargo.toml
crates/konf-init-kell/: Cargo.toml
crates/konf-init-kell/src/: main.rs
crates/konf-init/src/: config.rs  lib.rs  schedule.rs
crates/konf-init/tests/: orchestrator_product_test.rs
crates/konf-mcp/: Cargo.toml
crates/konf-mcp/src/: lib.rs  main.rs
crates/konf-runtime/: Cargo.toml
crates/konf-runtime/src/: bisimulation.rs  budget.rs  context.rs  dispatcher.rs  error.rs  event_bus.rs  execution_context.rs  guard.rs  hooks.rs  interaction.rs  journal.rs  lib.rs  monitor.rs  process.rs  runner_intents.rs  runtime.rs  scheduler.rs  scope.rs  storage.rs  workflow_tool.rs
crates/konf-runtime/src/journal/: fanout.rs  redb.rs  subscribe.rs  sweep.rs
crates/konf-runtime/tests/: akl_primitives_test.rs  automatic_capture_test.rs  bisimulation_test.rs  clock_challenge.rs  fanout_journal_test.rs  interaction_schema_test.rs  journal_ttl_test.rs  node_lifecycle_emission_test.rs  process_tests.rs  recorder_recursion_test.rs  runtime_tests.rs  scope_envelope_composition_test.rs  scope_tests.rs  trace_id_inheritance_test.rs
crates/konf-tool-embed/: Cargo.toml
crates/konf-tool-embed/src/: lib.rs
crates/konf-tool-http/: Cargo.toml
crates/konf-tool-http/src/: lib.rs
crates/konf-tool-llm/: Cargo.toml
crates/konf-tool-llm/src/: introspect.rs  lib.rs  validate.rs
crates/konf-tool-mcp/: Cargo.toml
crates/konf-tool-mcp/src/: lib.rs
crates/konf-tool-memory/: Cargo.toml
crates/konf-tool-memory-surreal/: Cargo.toml  README.md
crates/konf-tool-memory-surreal/examples/: experiment.rs
crates/konf-tool-memory-surreal/src/: backend.rs  config.rs  connect.rs  error.rs  journal_store.rs  lib.rs  schema.rs  search.rs  session.rs
crates/konf-tool-memory-surreal/tests/: backend_integration.rs  journal_store_test.rs
crates/konf-tool-memory/src/: lib.rs  tools.rs
crates/konf-tool-runner/: Cargo.toml  README.md
crates/konf-tool-runner/src/: error.rs  lib.rs  registry.rs  runner.rs  tools.rs
crates/konf-tool-runner/src/runners/: inline.rs  mod.rs
crates/konf-tool-runner/tests/: inline_runner.rs  scope_attenuation.rs  tool_surface.rs
crates/konf-tool-secret/: Cargo.toml
crates/konf-tool-secret/src/: lib.rs
crates/konf-tool-shell/: Cargo.toml
crates/konf-tool-shell/src/: lib.rs
crates/konflux-core/: Cargo.toml
crates/konflux-core/src/: builtin.rs  capability.rs  engine.rs  error.rs  executor.rs  expr.rs  hooks.rs  lib.rs  parser.rs  prompt.rs  stream.rs  template.rs  tool.rs  workflow.rs
crates/konflux-core/src/parser/: compiler.rs  graph.rs  schema.rs  validator.rs
crates/konflux-core/tests/: expr_tests.rs  integration_tests.rs  template_tests.rs  tool_tests.rs  workflow_tests.rs
crates/konflux-substrate/: Cargo.toml
crates/konflux-substrate/src/: builtin.rs  capability.rs  engine.rs  envelope.rs  executor.rs  hooks.rs  journal.rs  lib.rs  parser.rs  process.rs  projection.rs  prompt.rs  resource.rs  template.rs  tool.rs  tracing_context.rs  workflow.rs
crates/konflux-substrate/src/parser/: compiler.rs  schema.rs
crates/konflux-substrate/tests/: envelope_tests.proptest-regressions  envelope_tests.rs  expr_tests.rs  integration_tests.rs  template_tests.rs  tool_tests.rs  workflow_tests.rs
docs/: DEPRECATED_TERMS.md  MENTAL_MODEL.md  README.md
docs/admin-guide/: deployment.md  integration.md  platform-config.md  security.md
docs/architecture/: backend.md  cells-and-kells.md  configuration-strategy.md  design-principles.md  durability.md  engine.md  init-kell.md  init.md  mcp-http.md  mcp.md  memory-backends.md  multi-tenancy.md  overview.md  runtime.md  service-model.md  session-state.md  storage.md  tool-extensibility.md  tools.md  why-konf.md
docs/archive/: 2026-04-05-konflux-rewrite.md  2026-04-06-master-implementation-plan.md  2026-04-06-phase-a-hardening.md  2026-04-06-phase-b-konf-runtime.md  2026-04-06-phase-c-konf-backend.md
docs/getting-started/: concepts.md  quickstart.md
docs/guides/: integration.md  quickstart.md
docs/plans/: implementation-plan.md  konf-v2.md  master-plan.md  unspool-migration.md
docs/product-guide/: configuration.md  creating-a-product.md  secrets.md  tools-reference.md  workflow-reference.md
docs/research/: 2026-04-05-runtime-architecture-survey.md  2026-04-05-runtime-recommendation.md  2026-04-06-architectural-claims-evaluation.md  2026-04-06-real-world-experiences.md  2026-04-06-rust-ecosystem-survey.md  2026-04-06-universal-storage-and-edge-vision.md
docs/specs/: configuration-strategy.md  konf-architecture.md  konf-backend-spec.md  konf-engine-spec.md  konf-init-spec.md  konf-mcp-spec.md  konf-runtime-spec.md  konf-tools-spec.md  memory-backends.md  multi-tenancy.md  workflow-yaml-schema.md
examples/chat-with-llm/: README.md
examples/echo-workflow/: README.md
examples/http-pipeline/: README.md
examples/memory-agent/: README.md
examples/minimal/: README.md
fleet/: EXPERIMENTS.md  README.md  fleet-compose.yml  host-setup.md  watch.sh
products/: README.md
products/_fleet-probe/: README.md
products/_template/: README.md
sandbox/: Dockerfile  README.md  docker-compose.yml
scripts/: check-generic-substrate.sh  github-app-token.py  start-konf-mcp.sh  stub-smrti.sh
sdk/: README.md
site/: CNAME  index.html  style.css
(+109 files in other folders)
