[workspace]
resolver = "2"
members = ["crates/*", "crates/konf-init-kell"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"
repository = "https://github.com/konf-dev/konf"
homepage = "https://konf.dev"
keywords = ["ai", "agents", "platform", "mcp", "workflow"]
categories = ["development-tools", "web-programming"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = "0.1"
async-stream = "0.3"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Async traits
async-trait = "0.1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Storage
# redb: embedded pure-Rust KV store backing the journal, scheduler, and runner intents.
redb = "4"
# postcard: compact binary serialization used for redb values (smaller + faster than JSON at rest).
postcard = { version = "1", features = ["alloc", "use-std"] }
surrealdb = { version = "3", default-features = false, features = ["kv-rocksdb", "kv-mem", "protocol-ws"] }

# HTTP
reqwest = { version = "0.13", features = ["json"] }
url = "2"

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Config
figment = { version = "0.10", features = ["toml", "env", "yaml"] }
arc-swap = "1"

# Template engine
minijinja = "2"
indexmap = { version = "2", features = ["serde"] }

# Concurrent data structures
papaya = "0.2"

# LLM
rig-core = "0.34"

# Embeddings
fastembed = "5"

# MCP
rmcp = { version = "1.3", features = ["client", "transport-child-process"] }

# Auth
jsonwebtoken = "10"

# Scheduling
cron = "0.15"

# Dev/test
tempfile = "3"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }


# NOTE: For local development with smrti checkout, create .cargo/config.toml:
#
# [patch."ssh://git@github.com/konf-dev/smrti.git"]
# konf-tool-memory-smrti = { path = "../smrti/konf-tool-memory-smrti" }
# smrti-core = { path = "../smrti/smrti-core" }
#
# [patch."ssh://git@github.com/konf-dev/konf.git"]
# konf-tool-memory = { path = "crates/konf-tool-memory" }
