[package]
name = "konf-init-kell"
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"
repository = "https://github.com/konf-dev/konf"
description = "CLI tool to scaffold new Konf kells (products)"

[dependencies]
konf-init = { path = "../konf-init" }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
