[package]
name = "konf-init"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Init system for the Konf platform — reads config, boots engine, registers tools"

[dependencies]
# Engine + Runtime
konflux-substrate = { path = "../konflux-substrate" }
konf-runtime = { path = "../konf-runtime" }

# Tool crates
konf-tool-http = { path = "../konf-tool-http" }
konf-tool-llm = { path = "../konf-tool-llm" }
konf-tool-embed = { path = "../konf-tool-embed" }
konf-tool-mcp = { path = "../konf-tool-mcp" }
konf-tool-memory = { path = "../konf-tool-memory" }
konf-tool-runner = { path = "../konf-tool-runner" }
konf-tool-shell = { path = "../konf-tool-shell" }
konf-tool-secret = { path = "../konf-tool-secret" }

# Memory backends (external, feature-gated)
konf-tool-memory-smrti = { git = "ssh://git@github.com/konf-dev/smrti.git", optional = true }
konf-tool-memory-surreal = { path = "../konf-tool-memory-surreal", optional = true }

# Config
figment = { workspace = true }
arc-swap = { workspace = true }
notify = "8"

# Common
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
# memory-surreal is the default: embedded (RocksDB) or remote, zero external
# SSH keys required. memory-smrti is opt-in for Postgres+pgvector deployments
# that already have smrti SSH access.
default = ["memory-surreal"]
memory-smrti = ["dep:konf-tool-memory-smrti"]
memory-surreal = ["dep:konf-tool-memory-surreal"]
