[package]
name = "konf-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "OS-like workflow management runtime for the Konf AI platform"

[dependencies]
konflux-core = { path = "../konflux-core" }
tokio = { workspace = true }
tokio-util = { workspace = true }
papaya = { workspace = true }
redb = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
cron = { workspace = true }
tracing = { version = "0.1", features = ["attributes"] }
thiserror = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = { workspace = true }
