[package]
name = "konf-tool-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
konflux-substrate = { path = "../konflux-substrate" }
rig-core = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
