[package]
name = "konf-tool-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
konflux-substrate = { path = "../konflux-substrate" }
konf-runtime = { path = "../konf-runtime" }
rmcp = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
