[package]
name = "konf-tool-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Memory tools and MemoryBackend trait for the Konf platform"

[dependencies]
konflux-substrate = { path = "../konflux-substrate" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
