[package]
name = "konf-tool-shell"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shell execution tool (shell:exec) for the Konf platform — runs commands in a Docker sandbox"

[dependencies]
konflux-core = { path = "../konflux-core" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
